--- a/config/conf.yml
+++ b/config/conf.yml
@@ -3,3 +3,5 @@ BASE:
   log_extension: ".log"
   test:
     url: "http://211.103.136.242:8064"
+    case_file: "requeststest.xlsx"
+    case_sheet: "美多商城接口测试用例"
