--- a/pytest.ini
+++ b/pytest.ini
@@ -1,10 +1,10 @@
 [pytest]
-addopts = -s --html=./report/report.html --reruns 2 --reruns-delay=5
+addopts = -s --html=./report/report.html --reruns 2 --reruns-delay=5 --alluredir E:/InterAutoTest/report/result
 
 testpaths = testcase
 
 python_files = test*.py
 
-python_classes = Test_*
+python_classes = Test*
 
 python-functions = test_*
