--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,123 @@
-xlrd
-requests
-pytest=6.1.1
+allure-pytest==2.9.45
+allure-python-commons==2.9.45
+altgraph==0.17
+Appium-Python-Client==1.0.2
+asgiref==3.4.1
+atomicwrites==1.4.0
+attrs==20.2.0
+bcrypt==3.2.0
+beautifulsoup4==4.9.3
+certifi==2020.6.20
+cffi==1.14.4
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.4
+cryptography==3.3.1
+cssselect==1.1.0
+cx-Oracle==8.2.1
+DateTime==4.4
+ddt==1.4.4
+decorator==4.4.2
+defusedxml==0.7.1
+Django==3.2.7
+django-bootstrap4==21.2
+docutils==0.16
+dynaconf==3.1.7
+et-xmlfile==1.1.0
+Flask==1.1.2
+Flask-Login==0.5.0
+future==0.18.2
+html-testRunner @ file:///D:/Python37/Scripts/html_testRunner-1.2.1-py2.py3-none-any.whl
+id-validator==1.0.20
+idna==2.10
+importlib-metadata==2.0.0
+iniconfig==1.1.1
+install==1.3.4
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jsmin==2.2.2
+json5==0.9.5
+jsonpatch==1.28
+jsonpointer==2.0
+kitchen==1.2.6
+lxml==4.6.3
+MarkupSafe==1.1.1
+MouseInfo==0.1.3
+mysql-connector-python==8.0.19
+mysqlclient==2.0.3
+numpy==1.20.0
+openpyxl==3.0.10
+packaging==20.4
+pandas==1.3.5
+paramiko==2.7.2
+pefile==2019.4.18
+phone==0.4.3
+Pillow==8.1.0
+pluggy==0.13.1
+py==1.9.0
+PyAutoGUI==0.9.53
+pycparser==2.20
+pycurl==7.43.0.5
+PyGetWindow==0.0.9
+Pygments==2.7.4
+pyinstaller==4.2
+pyinstaller-hooks-contrib==2020.11
+PyMsgBox==1.0.9
+PyMySQL==1.0.2
+PyNaCl==1.4.0
+pyparsing==2.4.7
+pyperclip==1.8.2
+Pypubsub==4.0.3
+pyquery==1.4.3
+PyRect==0.2.0
+PyScreeze==0.1.28
+PySimpleGUI==4.60.1
+pyspider==0.3.10
+pytest==6.1.1
+pytest-html==3.1.1
+pytest-metadata==2.0.2
+pytest-ordering==0.6
+pytest-rerunfailures==10.2
+python-dateutil==2.8.2
+pytweening==1.0.4
+pytz==2021.3
+pywin32==300
+pywin32-ctypes==0.2.0
+PyYAML==5.3.1
+redis==3.5.3
+requests==2.24.0
+robotframework==3.1.2
+robotframework-appiumlibrary==1.5.0.7
+robotframework-archivelibrary==0.4.0
+robotframework-databaselibrary==1.2.4
+robotframework-ftplibrary==1.9
+robotframework-httplibrary==0.4.2
+robotframework-pythonlibcore==2.2.1
+robotframework-requests==0.8.0
+robotframework-ride==1.7.4.2
+robotframework-selenium2library==3.0.0
+robotframework-seleniumlibrary==5.0.0
+robotframework-sshlibrary==3.6.0
+scp==0.13.3
+selenium==3.141.0
+six==1.15.0
+soupsieve==2.1
+sqlparse==0.4.2
+tblib==1.7.0
+tkinterhtml==0.7
+toml==0.10.1
+tornado==4.5.3
+typing-extensions==3.7.4.3
+u-msgpack-python==2.7.1
+unittestreport==1.0.9
+urllib3==1.25.10
+waitress==1.4.4
+WebOb==1.8.6
+WebTest==2.0.35
+Werkzeug==1.0.1
+WsgiDAV==2.4.1
+wxPython==4.0.7.post2
+xlrd2==1.3.4
+xlwt==1.3.0
+zipp==3.4.0
+zope.interface==5.4.0
